force-app/main/default/objects/AccountChangeNotificationLowPrio__e/AccountChangeNotificationLowPrio__e.object-meta.xml
<CustomObject>
    <label>AccountChangeNotificationLowPrio</label>
    <pluralLabel>AccountChangeNotificationLowPrios</pluralLabel>
</CustomObject>