force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Billing_Expired__c.field-meta.xml
<CustomField>
    <fullName>Billing_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing_Expired</label>
    <type>Checkbox</type>
</CustomField>