force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_Code__c</fullName>
    <label>Billing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>