force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Broker_Group__c.field-meta.xml
<CustomField>
    <fullName>Broker_Group__c</fullName>
    <label>Broker Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>