force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Credit_Cut_Off__c.field-meta.xml
<CustomField>
    <fullName>Credit_Cut_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Cut Off</label>
    <type>Checkbox</type>
</CustomField>