force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Credit_Terms__c.field-meta.xml
<CustomField>
    <fullName>Credit_Terms__c</fullName>
    <label>Credit Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>