force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/CS_EPA_ID__c.field-meta.xml
<CustomField>
    <fullName>CS_EPA_ID__c</fullName>
    <label>CS EPA ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>