force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Customer_Engagement_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_Engagement_Manager__c</fullName>
    <label>Customer Engagement Manager</label>
    <length>255</length> 
    <type>Text</type>
</CustomField>