force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Dual_Corp_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Dual_Corp_Account_Owner__c</fullName>
    <label>Dual Corp Account Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>