force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Email_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Email_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Invoices</label>
    <type>Checkbox</type>
</CustomField>