force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Generator_Status__c.field-meta.xml
<CustomField>
    <fullName>Generator_Status__c</fullName>
    <label>Generator Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>