force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/GENREG__c.field-meta.xml
<CustomField>
    <fullName>GENREG__c</fullName>
    <label>GENREG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>