force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Headline_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Headline_Expiration_Date__c</fullName>
    <label>Headline_Expiration_Date</label>
    <type>DateTime</type>
</CustomField>