force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/High_Priority__c.field-meta.xml
<CustomField>
    <fullName>High_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Priority</label> 
    <type>Checkbox</type>
</CustomField>