force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Manifest_Address1__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Address1__c</fullName>
    <label>Manifest Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>