force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Manifest_Address2__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Address2__c</fullName>
    <label>Manifest Address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>