force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Manifest_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Country_Code__c</fullName>
    <label>Manifest Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>