force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Manifest_Expired__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manifest Expired</label>
    <type>Checkbox</type>
</CustomField>