force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Manifest_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Region_Code__c</fullName>
    <label>Manifest Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>