force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Milkrun_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Milkrun_Service_Type__c</fullName>
    <label>Milkrun Service Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>