force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Pay_To_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Pay_To_Region_Code__c</fullName>
    <label>Pay To Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>