force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <label>RecordTypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>