force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/Sic__c.field-meta.xml
<CustomField>
    <fullName>Sic__c</fullName>
    <label>Sic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>