force-app/main/default/objects/AccountChangeNotificationLowPrio__e/fields/WIN_ID__c.field-meta.xml
<CustomField>
    <fullName>WIN_ID__c</fullName>
    <label>WIN ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>